--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Nova+Mono");
+
 :root {
   --saturation: 50%;
   --lightness: 75%;
@@ -24,7 +26,7 @@ body {
 
 body {
   background-color: var(--color-black);
-  color: var(--color-white);
+  font-family: "Nova Mono", monospace;
   display: flex;
   align-items: center;
   justify-content: center;
